added multilang support, live preview of built corpora

--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -1,4 +1,4 @@
-#Sun Jan 04 05:07:17 CET 2015
+#Wed May 20 16:13:35 CEST 2015
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.rootCategory=DEBUG, stdout
 log4j.appender.stdout.Threshold=INFO
