--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>sk.svec.jan.acb</groupId>
     <artifactId>acb</artifactId>
     <packaging>war</packaging>
-    <version>1.0.1</version>
+    <version>1.0.2_beta</version>
     <name>author corpora builder</name>
     
       
