--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>sk.svec.jan.acb</groupId>
     <artifactId>acb</artifactId>
     <packaging>war</packaging>
-    <version>1.0.2_beta</version>
+    <version>1.0.2</version>
     <name>author corpora builder</name>
     
       
@@ -141,6 +141,12 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.7.3</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>xsoup</artifactId>
+            <version>0.3.0</version>
         </dependency>
         
     </dependencies>  
