--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -1,4 +1,4 @@
-#Wed May 20 16:13:35 CEST 2015
+#Wed Nov 18 17:12:39 CET 2015
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.rootCategory=DEBUG, stdout
 log4j.appender.stdout.Threshold=INFO
